[gd_scene load_steps=19 format=3 uid="uid://wjb8cyv4jvd8"]

[ext_resource type="Material" uid="uid://bxlvq722jmuid" path="res://materials/SniperMaterial.tres" id="1_e1wde"]
[ext_resource type="Script" uid="uid://wbgce1e4vyn7" path="res://world/buildings/Sniper.gd" id="1_u6s15"]
[ext_resource type="PhysicsMaterial" uid="uid://cxmvb6atqbyf0" path="res://materials/physics/DefaultPhysics.tres" id="3_qxwcm"]
[ext_resource type="PackedScene" uid="uid://cog25x4x6herp" path="res://components/SniperRay.tscn" id="4_ayxhp"]
[ext_resource type="AudioStream" uid="uid://ced782tiywpgv" path="res://sounds/tas_ambillent_5.wav" id="6_e1wde"]
[ext_resource type="Shader" uid="uid://b7lpd6h1smubj" path="res://materials/visual/CircleMatVis.tres" id="7_v1t5n"]
[ext_resource type="PackedScene" uid="uid://bmyq0wms5x6rm" path="res://components/HalfCapsuleRounded.tscn" id="8_u6s15"]
[ext_resource type="Material" uid="uid://cl1am5df8gk6t" path="res://materials/PoleBaseMaterial.tres" id="9_p61hx"]

[sub_resource type="TorusMesh" id="TorusMesh_u6s15"]
inner_radius = 0.2
outer_radius = 0.4
rings = 32
ring_segments = 16

[sub_resource type="TorusMesh" id="TorusMesh_p61hx"]
inner_radius = 0.4
outer_radius = 0.6
rings = 32
ring_segments = 16

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iwplw"]
radius = 0.25
height = 1.0

[sub_resource type="Curve" id="Curve_ayxhp"]
_data = [Vector2(0, 1), 0.0, 0.008091867, 0, 0, Vector2(0.50065184, 1), 0.0, 0.0, 0, 0, Vector2(0.9986962, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e1wde"]
specular_mode = 2
disable_ambient_light = true
disable_fog = true
disable_specular_occlusion = true
emission_enabled = true
emission = Color(0.33999997, 0.33999997, 1, 1)
emission_energy_multiplier = 4.0

[sub_resource type="CylinderMesh" id="CylinderMesh_u6s15"]
material = SubResource("StandardMaterial3D_e1wde")
top_radius = 0.2
bottom_radius = 0.2
height = 0.7
radial_segments = 16
rings = 2

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vc5tq"]
radius = 1.0

[sub_resource type="PlaneMesh" id="PlaneMesh_ail6x"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rlav8"]
render_priority = 2
shader = ExtResource("7_v1t5n")
shader_parameter/Color = Color(0.56799984, 0.45999998, 1, 0.078431375)
shader_parameter/OuterRadius = 0.999999977648
shader_parameter/InnerRadius = 0.9499999787656

[sub_resource type="CylinderShape3D" id="CylinderShape3D_iwplw"]
height = 1.0

[node name="Sniper" type="Node3D"]
script = ExtResource("1_u6s15")

[node name="BarrelTarget" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="BarrelPivot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 1.75, 0)

[node name="TorusMesh1" type="MeshInstance3D" parent="BarrelPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -8.742278e-08, -1, 0, 2, -4.371139e-08, 0, 2.998998e-09, -0.50360954)
mesh = SubResource("TorusMesh_u6s15")
surface_material_override/0 = ExtResource("1_e1wde")

[node name="TorusMesh2" type="MeshInstance3D" parent="BarrelPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -8.742278e-08, -1, 0, 2, -4.371139e-08, 0, -1.90307e-08, 0.00037121773)
mesh = SubResource("TorusMesh_p61hx")
surface_material_override/0 = ExtResource("1_e1wde")

[node name="TorusMesh3" type="MeshInstance3D" parent="BarrelPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -8.742278e-08, -1, 0, 2, -4.371139e-08, 0, -4.084146e-08, 0.49934328)
mesh = SubResource("TorusMesh_u6s15")
surface_material_override/0 = ExtResource("1_e1wde")

[node name="AnimatableBody3D" type="AnimatableBody3D" parent="BarrelPivot"]
collision_layer = 4
collision_mask = 0
physics_material_override = ExtResource("3_qxwcm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BarrelPivot/AnimatableBody3D"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_iwplw")

[node name="Ray" type="RayCast3D" parent="BarrelPivot"]
unique_name_in_owner = true
enabled = false
collision_mask = 2
debug_shape_custom_color = Color(1, 0.8008063, 0, 1)
debug_shape_thickness = 5

[node name="SniperRay" parent="BarrelPivot" instance=ExtResource("4_ayxhp")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.34089905)
visible = false
radius = 0.1
glowCurve = SubResource("Curve_ayxhp")

[node name="SniperGlow" type="MeshInstance3D" parent="BarrelPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_u6s15")

[node name="Sensor" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2
input_ray_pickable = false
monitorable = false
linear_damp_space_override = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sensor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_vc5tq")

[node name="SensorPlane" type="MeshInstance3D" parent="Sensor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)
mesh = SubResource("PlaneMesh_ail6x")
surface_material_override/0 = SubResource("ShaderMaterial_rlav8")

[node name="Base" type="StaticBody3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 4
collision_mask = 0
physics_material_override = ExtResource("3_qxwcm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Base"]
shape = SubResource("CylinderShape3D_iwplw")

[node name="fire" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_e1wde")
attenuation_model = 1
unit_size = 6.0
max_db = 0.0
bus = &"Game"

[node name="reloadTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="HalfCapsuleRounded" parent="." instance=ExtResource("8_u6s15")]
material = ExtResource("9_p61hx")

[connection signal="body_entered" from="Sensor" to="." method="_on_sensor_body_entered"]
[connection signal="body_exited" from="Sensor" to="." method="_on_sensor_body_exited"]
